[workspace]
resolver = "2"
members = [
    "crates/tundra-fme",
    "crates/tundra-core",
    "crates/tundra-server",
    "crates/tundra-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "sync", "net", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
