[workspace]
resolver = "2"
members = [
    "crates/tundra-fme",
    "crates/tundra-core",
    "crates/tundra-server",
    "crates/tundra-client",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "sync", "net", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
blake3 = "1"
rand_chacha = "0.9"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
