[package]
name = "tundra-gui"
version = "0.1.0"
description = "Tundra VPN Client"
authors = ["Tundra"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tundra-core = { path = "../crates/tundra-core" }
tundra-fme = { path = "../crates/tundra-fme" }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = "0.4"
rand = { workspace = true }
rand_chacha = { workspace = true }
blake3 = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
hex = "0.4"
dirs = "6"
tokio-util = { version = "0.7", features = ["rt"] }
webpki-roots = "0.26"
